--- a/src/widgets/Navbar/ui/Navbar/Navbar-Enhanced.module.scss
+++ b/src/widgets/Navbar/ui/Navbar/Navbar-Enhanced.module.scss
@@ -7,7 +7,7 @@
     position: relative;
     width: 100%;
     max-width: 1250px;
-    margin-top: 80px;
+    margin-top: 0;
     padding: var(--space-md) var(--space-md);
     display: flex;
     align-items: center;
